--- a/YuWaShop/Person/SubVC/Bank/ForgetPayPasswordTableViewCell.xib
+++ b/YuWaShop/Person/SubVC/Bank/ForgetPayPasswordTableViewCell.xib
@@ -16,21 +16,21 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="卡号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSI-Cb-N3A">
-                        <rect key="frame" x="8" y="9" width="60" height="20.5"/>
+                        <rect key="frame" x="14" y="13" width="50" height="27"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="Rbe-PA-Q2n"/>
+                            <constraint firstAttribute="width" constant="50" id="Rbe-PA-Q2n"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cVI-I4-DwO">
-                        <rect key="frame" x="78" y="4.5" width="226" height="30"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="64" y="12" width="240" height="30"/>
+                        <color key="textColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
@@ -39,10 +39,11 @@
                     </textField>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="cVI-I4-DwO" firstAttribute="leading" secondItem="gSI-Cb-N3A" secondAttribute="trailing" constant="10" id="MwA-KU-cXF"/>
+                    <constraint firstItem="gSI-Cb-N3A" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="3sE-uw-00x"/>
+                    <constraint firstItem="cVI-I4-DwO" firstAttribute="leading" secondItem="gSI-Cb-N3A" secondAttribute="trailing" id="MwA-KU-cXF"/>
                     <constraint firstAttribute="trailing" secondItem="cVI-I4-DwO" secondAttribute="trailing" constant="16" id="O4e-2p-fNJ"/>
-                    <constraint firstItem="gSI-Cb-N3A" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="nzG-ft-hEl"/>
-                    <constraint firstItem="gSI-Cb-N3A" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="1" id="odZ-ii-2bK"/>
+                    <constraint firstItem="gSI-Cb-N3A" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="QS1-uO-9ap"/>
+                    <constraint firstItem="cVI-I4-DwO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="jNd-2E-ebs"/>
                     <constraint firstItem="cVI-I4-DwO" firstAttribute="centerY" secondItem="gSI-Cb-N3A" secondAttribute="centerY" id="uGf-gi-RA1"/>
                 </constraints>
             </tableViewCellContentView>
